--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </h1>
           <p class="lead mb-10">
             I graduated from the gymnasium in 2019 with priorities in
-            informatics as well as mathematics and physiscs at the Phillip Melanchton
+            informatics as well as mathematics and physics at the Phillip Melanchton
             Gymnasium Meine
           </p>
           <img src="/img/gymnasium_pmg.png" class="img-fluid shadow-4 position-relative rounded2 my-5" />
