--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
     <div class="alignCenter">
       <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
     </div>
+    <div class="container_ref">
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <a class="a_ref" href="./index.html">
+            <h1 class="text_ref"> Profile </h1>
+          </a>
+        </div>
+        <div class="col-auto">
+          <a class="a_ref" href="/html/pages/projects.html">
+             <h1 class="text_ref">Projects</h1>
+          </a>
+        </div>
+      </div>
+    </div>
 
     <h1 class="header1">
       Philo Klemenz
@@ -95,11 +109,11 @@
           <img src="/img/elementary_zellberg.png" class="img-fluid shadow-4 position-relative rounded2 my-5" />
           <h1 class="ls-tight font-bolder display-3 pt-5">Certificates.</h1>
           <h1 class="ls-tight display-6 mb-5 pt-5">Completed</h1>
-          <div class="card text-white">
+          <div class="card_cert text-white">
             <h5 class="card-body"> Moderations und Präsentationstechniken </h5>
           </div>
           <h1 class="ls-tight display-6 mb-5 pt-5">In Progress</h1>
-          <div class="card text-white">
+          <div class="card_cert text-white">
             <h5 class="card-body"> Projektmanagement Basiszertifikat (IPMA) </h5>
           </div>
         </div>
