small Typo improvement

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             Student at CAU<br />Business Informatics.
           </h1>
           <p class="lead mb-10">
-            I am a passioned and well structured student getting into Business Informatics (Bachelor),
-            specialising in Data Science and Process Mining with the focus on Projectmanagement.<br />
+            I am a passionate and well structured student getting into Business Informatics (Bachelor),
+            specialising in Data Science and Process Mining with a focus on Projectmanagement.<br />
           </p>
           <img src="/img/uni_cau.jpg" class="img-fluid shadow-4 position-relative rounded2 my-5" />
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5">
@@ -71,26 +71,26 @@
           <p class="lead mb-10">
             I graduated from the gymnasium in 2019 with priorities in
             informatics as well as mathematics and physics at the Phillip Melanchton
-            Gymnasium Meine
+            Gymnasium Meine.
           </p>
           <img src="/img/gymnasium_pmg.png" class="img-fluid shadow-4 position-relative rounded2 my-5" />
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5">America.</h1>
           <p class="lead mb-10">
             From 2012 - 2015 I have been living in the United Staates of
-            America improving my english and furthermore getting to know the
-            american culture.
+            America improving my English and furthermore getting to know the
+            American culture.
           </p>
           <p class="lead mb-10">
-            There I have been studying at the German School Washingthon DC
-            which has a focus on teaching in english but providing the high
-            standards of german education.
+            There I have been studying at the German School Washington DC
+            which has a focus on teaching in english, but providing the high
+            Standards of German education.
           </p>
           <img src="/img/gymnasium_gis.png" class="img-fluid shadow-4 position-relative rounded2 my-5" />
 
           <h1 class="ls-tight font-bolder display-3 mb-5 pt-5">Elementry School.</h1>
           <p class="lead mb-10">
-            My school career began in 2008 at the Grundschule am Zellberg in Meine Germany.
-            There I was able to build the fundamentals for all my steps ahead.
+            My educational career started in 2008 at the Grundschule am Zellberg in Meine Germany.
+            There I was able to construct the foundations for all my steps ahead.
           </p>
           <img src="/img/elementary_zellberg.png" class="img-fluid shadow-4 position-relative rounded2 my-5" />
           <h1 class="ls-tight font-bolder display-3 pt-5">Certificates.</h1>
@@ -111,7 +111,7 @@
           </div>
           <h3 class="ls-tight font-bolder display-3 pt-5 m-3">Programming Experience.</h3>
           <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Java</h3>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Java </h3>
             <div class="progress m-3">
               <div class="progress-bar" role="progressbar" style="--value:85%" aria-valuenow="85" aria-valuemin="0"
                 aria-valuemax="100"></div>
@@ -125,28 +125,28 @@
             </div>
           </div>
           <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Dart & Flutter</h3>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Dart & Flutter </h3>
             <div class="progress m-3">
               <div class="progress-bar" role="progressbar" style="--value:70%" aria-valuenow="70" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
           </div>
           <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> HTML & CSS</h3>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> HTML & CSS </h3>
             <div class="progress m-3">
               <div class="progress-bar" role="progressbar" style="--value:75%" aria-valuenow="75" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
           </div>
           <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Java Script</h3>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Java Script </h3>
             <div class="progress m-3">
               <div class="progress-bar" role="progressbar" style="--value:25%" aria-valuenow="25" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
           </div>
           <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> SQL</h3>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> SQL </h3>
             <div class="progress m-3">
               <div class="progress-bar" role="progressbar" style="--value:45%" aria-valuenow="25" aria-valuemin="0"
                 aria-valuemax="100"></div>
@@ -160,7 +160,7 @@
             </div>
           </div>
           <div>
-            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Haskell</h3>
+            <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Haskell </h3>
             <div class="progress m-3">
               <div class="progress-bar" role="progressbar" style="--value:15%" aria-valuenow="15" aria-valuemin="0"
                 aria-valuemax="100"></div>
