--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -45,10 +45,15 @@
                         <img src="../../img/trintelV4_transparentB.jpg" class="img_pr"
                             alt="Hollywood Sign on The Hill" />
                         <div class="card-body">
-                            <h5 class="header_pr">Trintel</h5>
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_pr">Trintel</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i></div>
+                            </div>
                             <p class="text_pr">
-                                This is a longer card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.
+                                This is a my first Teamproject with a couple of students as a Uni project. 
+                                We constructed a webapp for the RBZ Kiel.
                             </p>
                         </div>
                     </div>
@@ -59,10 +64,14 @@
                     <div class="card card_pr">
                         <img src="../../img/YouStageLogo1.png" class="img_pr" alt="Palm Springs Road" />
                         <div class="card-body">
-                            <h5 class="header_pr">Youstage</h5>
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_pr">Youstage</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i></div>
+                            </div>
                             <p class="text_pr">
-                                This is a longer card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.
+                                This is a prototype of a concept app to get started with flutter.
                             </p>
                         </div>
                     </div>
@@ -73,9 +82,13 @@
                     <div class="card card_pr">
                         <img src="../../img/mycroft_logo.jpg" class="img_pr" alt="Los Angeles Skyscrapers" />
                         <div class="card-body">
-                            <h5 class="header_pr">MyCroft</h5>
-                            <p class="text_pr">This is a longer card with supporting text below as a natural lead-in to
-                                additional content.</p>
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_pr">Mycroft</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i></div>
+                            </div>
+                            <p class="text_pr">In this project i wanted to set up my own Voice Assistant for security and privacy reasons.</p>
                         </div>
                     </div>
                 </a>
@@ -85,10 +98,14 @@
                     <div class="card card_pr">
                         <img src="../../img/homeassistant_logo.jpg" class="img_pr" alt="Skyscrapers" />
                         <div class="card-body">
-                            <h5 class="header_pr">HomeAssistant</h5>
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_pr">HomeAssistant</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i></div>
+                            </div>
                             <p class="text_pr">
-                                This is a longer card with supporting text below as a natural lead-in to
-                                additional content.
+                                Here I deployed my own Homeserver for all my Smart Home Devices.
                             </p>
                         </div>
                     </div>
@@ -99,9 +116,13 @@
                     <div class="card card_pr">
                         <img src="../../img/pk_logo_green.png" class="img_pr" alt="Los Angeles Skyscrapers" />
                         <div class="card-body">
-                            <h5 class="header_pr">Website</h5>
-                            <p class="text_pr">This is a longer card with supporting text below as a natural lead-in to
-                                additional content.</p>
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_pr">Website</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i></div>
+                            </div>
+                            <p class="text_pr">A from Scratch Webpage to get back into HTML and CSS.</p>
                         </div>
                     </div>
                 </a>
@@ -111,10 +132,14 @@
                     <div class="card card_pr">
                         <img src="../../img/tictactoe_logo.png" class="img_pr" alt="Skyscrapers" />
                         <div class="card-body">
-                            <h5 class="header_pr">Skyscraper TicTacToe</h5>
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_pr">Skyscraper Tic-Tac-Toe</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i></div>
+                            </div>
                             <p class="text_pr">
-                                This is a longer card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.
+                                A Uni Project programming Tic-Tac-Toe on the Scycarper of the CAU Kiel.
                             </p>
                         </div>
                     </div>
