--- a/html/pages/trintel_project.html
+++ b/html/pages/trintel_project.html
@@ -27,7 +27,7 @@
                     </a>
                 </div>
                 <div class="col-auto">
-                    <a class="a_ref" href="../projects.html">
+                    <a class="a_ref" href="../pages/projects.html">
                         <h1 class="text_ref">Projects</h1>
                     </a>
                 </div>
@@ -54,43 +54,43 @@
               <div class="carousel-item active">
                 <img src="../../img/trintel/trintel_login.png" class="d-block w-100 rounded2" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 class="header_pr">First slide label</h5>
-                  <p class="text_pr">Some representative placeholder content for the first slide.</p>
+                  <h5 class="header_pr">LogIn Page.</h5>
+                  <p class="text_pr">Here you can LogIn with your registered Account.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="../../img/trintel/trintel_adminpanel.png" class="d-block w-100 rounded2" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 class="header_pr">Second slide label</h5>
-                  <p class="text_pr">Some representative placeholder content for the second slide.</p>
+                  <h5 class="header_pr">Admin Panel.</h5>
+                  <p class="text_pr">As an Admin you can access special Tools in the Admin Panel.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="../../img/trintel/trintel_Unternehmensseite.png" class="d-block w-100 rounded2" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 class="header_pr">Third slide label</h5>
-                  <p class="text_pr">Some representative placeholder content for the third slide.</p>
+                  <h5 class="header_pr">Companie Page.</h5>
+                  <p class="text_pr">In this case as an Admin you can see and edit all companies.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="../../img/trintel/trintel_Schuelerseite.png" class="d-block w-100 rounded2" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 class="header_pr">Third slide label</h5>
-                  <p class="text_pr">Some representative placeholder content for the third slide.</p>
+                  <h5 class="header_pr">Student Page.</h5>
+                  <p class="text_pr">As an Admin you can administrate and search through all student accounts.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="../../img/trintel/trintel_Transaktionsseite.png" class="d-block w-100 rounded2" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 class="header_pr">Third slide label</h5>
-                  <p class="text_pr">Some representative placeholder content for the third slide.</p>
+                  <h5 class="header_pr">Transaction Page.</h5>
+                  <p class="text_pr">The Admin can see all made transactions from all companies in this tab.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="../../img/trintel/trintel_Statistikseite.png" class="d-block w-100 rounded2" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 class="header_pr">Third slide label</h5>
-                  <p class="text_pr">Some representative placeholder content for the third slide.</p>
+                  <h5 class="header_pr">Statistics.</h5>
+                  <p class="text_pr">The Admin cann see all Systemwide Statistics.</p>
                 </div>
               </div>
             </div>
@@ -107,16 +107,38 @@
           <div class="card m-5 card_pr">
             <h5 class="card-header header_pr">About the Project</h5>
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Task</h5>
+              <p class="card-text">The Task of the this project was to construct a working software for the RBZ Kiel. The customer wanted a software to 
+                support their stundents in their Business Simulation by tracking their Transactions with their fantasy Bussinesses.
+              </p>
+              <h5 class="card-title">Functionality</h5>
+              <p class="card-text">Our Software provides the core functions such as User Roles with diffrent Interfaces ass well as the Companies and their transactions.
+                A user is then able to make transactions with their Company and gets feddback from the Software in form of Statistiks, Sales History or Confirmation of order. 
+                Furthermore the Admin has possibiltys of adjusting the whole Simulation.
+              </p>
+            </div>
+          </div>
+
+          <div class="card m-5 card_pr">
+            <h5 class="card-header header_pr">Repository</h5>
+            <div class="card-body">
+              <p class="card-text"><a href="https://cau-git.rz.uni-kiel.de/ifi-ag-se/softwareprojekt/lts-projekte/wise-2122-lms8-017">https://cau-git.rz.uni-kiel.de/ifi-ag-se/softwareprojekt/lts-projekte/wise-2122-lms8-017</a></p>
             </div>
           </div>
 
           <div class="card m-5 card_pr">
             <h5 class="card-header header_pr">Contributers</h5>
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">
+                <a href="">Beckmann, Jonas; </a>
+                <a href="">Gerke, Nicklas; </a>
+                <a href="https://git.informatik.uni-kiel.de/stu223691">Iben, Jan-Philip; </a>
+                <a href="https://github.com/Nudel4ufl4uf">Klemenz, Philo; </a>
+                <a href="https://github.com/b3z">Mayer, Luca; </a>
+                <a href="https://github.com/Felioh">Ohnesroge, Felix; </a>
+                <a href="https://github.com/cwerl">Werl, Christopher; </a>
+                <a href="https://github.com/MaxWiendl">Wiendel, Max; </a>
+              </p>
             </div>
           </div>
           
@@ -124,30 +146,37 @@
             <h5 class="card-header header_pr">Languages</h5>
             <div class="card-body">
                 <div>
-                  <h3 class="ls-tight font-bolder display-9 mb-3 m-3"> Java</h3>
+                  <h3 class="ls-tight font-bolder display-9 mb-3 m-3"> Java </h3>
                   <div class="progress m-3">
-                    <div class="progress-bar" role="progressbar" style="--value:85%" aria-valuenow="85" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="--value:64.4%" aria-valuenow="64.4" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
                 <div>
-                  <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> C++ </h3>
+                  <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> HTML </h3>
                   <div class="progress m-3">
-                    <div class="progress-bar" role="progressbar" style="--value:75%" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="--value:31.1%" aria-valuenow="31.3" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
                 <div>
-                  <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Dart & Flutter</h3>
+                  <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> JavaScript</h3>
                   <div class="progress m-3">
-                    <div class="progress-bar" role="progressbar" style="--value:70%" aria-valuenow="70" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="--value:2.3%" aria-valuenow="2.3" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
                 <div>
-                  <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> HTML & CSS</h3>
+                  <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> CSS </h3>
                   <div class="progress m-3">
-                    <div class="progress-bar" role="progressbar" style="--value:75%" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="--value:1.9%" aria-valuenow="1.9" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                </div>
+                <div>
+                  <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Other </h3>
+                  <div class="progress m-3">
+                    <div class="progress-bar" role="progressbar" style="--value:0.1%" aria-valuenow="0.1" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
