--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
   <div class="container max-w-screen-xl p-5">
+
     <div class="alignCenter">
       <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
     </div>
@@ -28,31 +29,61 @@
     </h1>
 
     <div class="container-link">
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/philo-klemenz-3bb046234"><i class="fab fa-linkedin-in icon"></i></a></li>
-        <li>
-          <a href="https://www.xing.com/profile/Philo_Klemenz"><i class="fab fa-xing icon"></i></a></li>
-        <li>
-          <a href="https://github.com/Nudel4ufl4uf"><i class="fab fa-github icon"></i></a></li>
-        <li>
-          <a href="https://discord.com/users/Nudelauflauf#9278"><i class="fab fa-discord icon"></i></a></li>
-        <li>
-          <a href="https://www.instagram.com/philoklm/"><i class="fab fa-instagram icon"></i></a></li>
-        <li>
-          <a href="https://open.spotify.com/user/philo.klemenz?si=6MbnOqIfT-euw9bZKjMAdg&utm_source=copy-link"><i
-              class="fab fa-spotify icon"></i></a></li>
-        <li>
-          <a
-            href="https://soundcloud.com/philoklemenz?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"><i
-              class="fab fa-soundcloud icon"></i></a></li>
-      </ul>
+      <!--Block for Link Items in Device Size = Large only!-->
+      <div class="d-none d-lg-block">
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/philo-klemenz-3bb046234"><i class="fab fa-linkedin-in icon"></i></a>
+          </li>
+          <li>
+            <a href="https://www.xing.com/profile/Philo_Klemenz"><i class="fab fa-xing icon"></i></a></li>
+          <li>
+            <a href="https://github.com/Nudel4ufl4uf"><i class="fab fa-github icon"></i></a></li>
+          <li>
+            <a href="https://www.instagram.com/philoklm/"><i class="fab fa-instagram icon"></i></a></li>
+          <li>
+            <a href="https://open.spotify.com/user/philo.klemenz?si=6MbnOqIfT-euw9bZKjMAdg&utm_source=copy-link"><i
+                class="fab fa-spotify icon"></i></a></li>
+          <li>
+            <a
+              href="https://soundcloud.com/philoklemenz?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"><i
+                class="fab fa-soundcloud icon"></i></a></li>
+        </ul>
+      </div>
+
+      <!--Block for Link Items in Device Size < Large only!-->
+      <div class="d-block d-lg-none">
+        <ul class="list-group list-group-horizontal d-flex justify-content-center">
+          <li class="list-group-item-light">
+            <a href="https://www.linkedin.com/in/philo-klemenz-3bb046234"><i class="fab fa-linkedin-in icon"></i></a>
+          </li>
+          <li class="list-group-item-light">
+            <a href="https://www.xing.com/profile/Philo_Klemenz"><i class="fab fa-xing icon"></i></a></li>
+        </ul>
+        <ul class="list-group list-group-horizontal d-flex justify-content-center">
+          <li class="list-group-item-light">
+            <a href="https://github.com/Nudel4ufl4uf"><i class="fab fa-github icon"></i></a></li>
+          <li class="list-group-item-light">
+            <a href="https://www.instagram.com/philoklm/"><i class="fab fa-instagram icon"></i></a></li>
+        </ul>
+        <ul class="list-group list-group-horizontal  justify-content-center">
+          <li class="list-group-item-light">
+            <a href="https://open.spotify.com/user/philo.klemenz?si=6MbnOqIfT-euw9bZKjMAdg&utm_source=copy-link"><i
+                class="fab fa-spotify icon"></i></a></li>
+          <li class="list-group-item-light">
+            <a
+              href="https://soundcloud.com/philoklemenz?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"><i
+                class="fab fa-soundcloud icon"></i></a></li>
+        </ul>
+      </div>
     </div>
   </div>
 
   <div class="py-24">
     <div class="container max-w-screen-xl px-5 pb-5">
       <div class="row align-items-top">
+
+        <!--Show small image only in Media Size < Large-->
         <div class="imgsmall d-block d-lg-none col-12 col-lg-6 ms-lg-auto">
           <img src="/img/portrait_half_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2" />
         </div>
@@ -93,6 +124,7 @@
             There I was able to construct the foundations for all my steps ahead.
           </p>
           <img src="/img/elementary_zellberg.png" class="img-fluid shadow-4 position-relative rounded2 my-5" />
+
           <h1 class="ls-tight font-bolder display-3 pt-5">Certificates.</h1>
           <h1 class="ls-tight display-6 mb-5 pt-5">Completed</h1>
           <div class="card text-white">
@@ -103,12 +135,16 @@
             <h5 class="card-body"> Projektmanagement Basiszertifikat (IPMA) </h5>
           </div>
         </div>
+
         <div class="col-12 col-lg-6 ms-lg-auto">
+
+          <!--Show big image only in Media Size = Large-->
           <div class="d-none d-lg-block">
             <div class="container ml2">
               <img src="/img/portrait_full_cropped.jpg" class="img-fluid shadow-4 position-relative rounded2" />
             </div>
           </div>
+
           <h3 class="ls-tight font-bolder display-3 pt-5 m-3">Programming Experience.</h3>
           <div>
             <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Java </h3>
@@ -174,6 +210,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </div>
