--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -34,9 +34,7 @@
             </div>
         </div>
 
-        <h1 class="header1">
-            Projects
-        </h1>
+        <h1 class="header1">Projects</h1>
 
         <div class="row row-cols-1 row-cols-md-2 g-4 row_pr">
             <div class="col">
@@ -49,10 +47,11 @@
                                 <div class="col-md-auto">
                                     <h5 class="header_pr">Trintel</h5>
                                 </div>
-                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i></div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
+                                </div>
                             </div>
                             <p class="text_pr">
-                                This is a my first Teamproject with a couple of students as a Uni project. 
+                                This is a my first Teamproject with a couple of students as a Uni project.
                                 We constructed a webapp for the RBZ Kiel.
                             </p>
                         </div>
@@ -68,7 +67,8 @@
                                 <div class="col-md-auto">
                                     <h5 class="header_pr">Youstage</h5>
                                 </div>
-                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i></div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
+                                </div>
                             </div>
                             <p class="text_pr">
                                 This is a prototype of a concept app to get started with flutter.
@@ -86,9 +86,11 @@
                                 <div class="col-md-auto">
                                     <h5 class="header_pr">Mycroft</h5>
                                 </div>
-                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i></div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
+                                </div>
                             </div>
-                            <p class="text_pr">In this project i wanted to set up my own Voice Assistant for security and privacy reasons.</p>
+                            <p class="text_pr">In this project i wanted to set up my own Voice Assistant for security
+                                and privacy reasons.</p>
                         </div>
                     </div>
                 </a>
@@ -102,7 +104,8 @@
                                 <div class="col-md-auto">
                                     <h5 class="header_pr">HomeAssistant</h5>
                                 </div>
-                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i></div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
+                                </div>
                             </div>
                             <p class="text_pr">
                                 Here I deployed my own Homeserver for all my Smart Home Devices.
@@ -122,7 +125,7 @@
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i></div>
                             </div>
-                            <p class="text_pr">A from Scratch Webpage to get back into HTML and CSS.</p>
+                            <p class="text_pr">A Webpage from Scratch to get back into HTML and CSS.</p>
                         </div>
                     </div>
                 </a>
@@ -136,10 +139,11 @@
                                 <div class="col-md-auto">
                                     <h5 class="header_pr">Skyscraper Tic-Tac-Toe</h5>
                                 </div>
-                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i></div>
+                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
+                                </div>
                             </div>
                             <p class="text_pr">
-                                A Uni Project programming Tic-Tac-Toe on the Scycarper of the CAU Kiel.
+                                A Uni Project programming Tic-Tac-Toe on the Skyscraper of the CAU Kiel.
                             </p>
                         </div>
                     </div>
