--- a/index.html
+++ b/index.html
@@ -34,12 +34,8 @@
       </div>
     </div>
 
-    <h1 class="header1">
-      Philo Klemenz
-    </h1>
-    <h1 class="header2">
-      aka Nudelauflauf
-    </h1>
+    <h1 class="header1">Philo Klemenz</h1>
+    <h1 class="header2">aka Nudelauflauf</h1>
 
     <div class="container-link">
       <ul>
