Some new pages added

--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -23,7 +23,7 @@
             <div class="row justify-content-center">
                 <div class="col-auto">
                     <a class="a_ref" href="../../index.html">
-                        <h1 class="text_ref"> Profile </h1>
+                        <h1 class="text_ref">Profile</h1>
                     </a>
                 </div>
                 <div class="col-auto">
@@ -115,7 +115,7 @@
                 </a>
             </div>
             <div class="col">
-                <a class="a_ref" href="./mycroft_project.html">
+                <a class="a_ref" href="./webpage_project.html">
                     <div class="card card_pr">
                         <img src="../../img/pk_logo_green.png" class="img_pr" alt="Los Angeles Skyscrapers" />
                         <div class="card-body">
@@ -125,25 +125,25 @@
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i></div>
                             </div>
-                            <p class="text_pr">A Webpage from Scratch to get back into HTML and CSS.</p>
+                            <p class="text_pr">A Webpage build from Scratch to get back into HTML and CSS.</p>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col">
-                <a class="a_ref" href="./homeassistant_project.html">
+                <a class="a_ref" href="./nudelsearch_project.html">
                     <div class="card card_pr">
-                        <img src="../../img/tictactoe_logo.png" class="img_pr" alt="Skyscrapers" />
+                        <img src="../../img/nudelsearch_logo.png" class="img_pr" alt="Skyscrapers" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_pr">Skyscraper Tic-Tac-Toe</h5>
+                                    <h5 class="header_pr">Nudelsearch</h5>
                                 </div>
-                                <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
+                                <div class="col-md-auto"><i class="fa fa-spinner green" aria-hidden="true"></i>
                                 </div>
                             </div>
                             <p class="text_pr">
-                                A Uni Project programming Tic-Tac-Toe on the Skyscraper of the CAU Kiel.
+                                My own public search engine based on searnxg. I deployed this solution for privacy reasons.
                             </p>
                         </div>
                     </div>
