Code and Typo Cleanup

--- a/html/pages/mycroft_project.html
+++ b/html/pages/mycroft_project.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyCroft</title>
+    <title>MyCroft AI</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -35,7 +35,7 @@
         </div>
 
         <h1 class="header1">
-            Mycroft
+            Mycroft AI
         </h1>
         <h1 class="header2">
             Privacy First Home Assistant
@@ -60,19 +60,17 @@
                     <img src="../../img/mycroft/mc_chatterminal.png" class="d-block w-100 rounded2" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-white">Terminal GUI</h5>
-                        <p class="text-white">Here you can see the Terminal GUI that shows your interactions in a visial
-                            matter.</p>
+                        <p class="text-white">Here you can see the terminal GUI that shows your interactions in a visual
+                            Manner.</p>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
                 </button>
                 <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
                 </button>
             </div>
         </div>
@@ -82,15 +80,14 @@
             <div class="card-body">
                 <h5 class="card-title">Task</h5>
                 <p class="card-text">The Idea was to deploy Mycroft as a privacy First Home Assistant solution on my
-                    raspberry pi.
+                    raspberry pi to replace my google home assistant.
                 </p>
                 <h5 class="card-title">Functionality</h5>
-                <p class="card-text">I turned my raspberry pi into an Home Assistant replycing my Google home due to
-                    privacy reasons.
-                    After connecting my external mic and speaker as well as installing the Mycroft distrobution, I
-                    then had to go through all
-                    the configration steps. Due to the big ammount of settings I was able to personalize Mycroft to
-                    my personal needs.
+                <p class="card-text">I transformed my raspberry pi into a Home Assistant, replacing my Google home
+                    because of privacy issues.
+                    After plugging in my external microphone and speaker and installing the Mycroft distribution, I had
+                    to go through all of the setup steps. Due to the great number of settings, I was able to customize
+                    Mycroft to my personal requirements.
                 </p>
             </div>
         </div>
@@ -98,7 +95,27 @@
         <div class="card m-5 card_pr">
             <h5 class="card-header header_pr">Source Project</h5>
             <div class="card-body">
-                <p class="card-text"><a href="https://mycroft.ai/">https://mycroft.ai/</a></p>
+                <h5 class="card-title">Homepage</h5>
+                <p class="card-text"><a href="https://mycroft.ai/"
+                        style="text-decoration: none;">mycroft.ai/</a></p>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">GitHub</h5>
+                <p class="card-text"><a href="https://github.com/MycroftAI"
+                        style="text-decoration: none;">github.com/MycroftAI</a></p>
+            </div>
+        </div>
+
+        <div class="card m-5 card_pr">
+            <h5 class="card-header header_pr">Components</h5>
+            <div class="card-body">
+                <div>
+                    <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Linux</h3>
+                    <div class="progress m-3">
+                        <div class="progress-bar" role="progressbar" style="--value:100.0%" aria-valuenow="100.0"
+                            aria-valuemin="0" aria-valuemax="100">100.0%</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
