--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -51,8 +51,8 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                This is a my first Teamproject with a couple of students as a Uni project.
-                                We constructed a webapp for the RBZ Kiel.
+                                This was a Team project with a couple of students as a Uni project.
+                                We constructed a web app for the RBZ Kiel.
                             </p>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                This is a prototype of a concept app to get started with flutter.
+                                This is a prototype for a concept application to begin with flutter.
                             </p>
                         </div>
                     </div>
@@ -84,13 +84,13 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_pr">Mycroft</h5>
+                                    <h5 class="header_pr">Mycroft AI</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-check-circle green" aria-hidden="true"></i>
                                 </div>
                             </div>
-                            <p class="text_pr">In this project i wanted to set up my own Voice Assistant for security
-                                and privacy reasons.</p>
+                            <p class="text_pr">In this project, I wanted to deploy my own voice assistant because of
+                                privacy concerns with my google assistant.</p>
                         </div>
                     </div>
                 </a>
@@ -121,11 +121,11 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
-                                    <h5 class="header_pr">Website</h5>
+                                    <h5 class="header_pr">Profile Website</h5>
                                 </div>
                                 <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i></div>
                             </div>
-                            <p class="text_pr">A Webpage build from Scratch to get back into HTML and CSS.</p>
+                            <p class="text_pr">A web page built from scratch to return to HTML & CSS. Furthermore I learned about DNS management.</p>
                         </div>
                     </div>
                 </a>
@@ -143,7 +143,8 @@
                                 </div>
                             </div>
                             <p class="text_pr">
-                                My own public search engine based on searnxg. I deployed this solution for privacy reasons.
+                                My own public search engine based on searnxg. I deployed this solution due to privacy
+                                concerns.
                             </p>
                         </div>
                     </div>
@@ -157,7 +158,7 @@
         </head>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        </script>
+            </script>
 </body>
 
 </html>
