--- a/html/pages/youstage_project.html
+++ b/html/pages/youstage_project.html
@@ -38,7 +38,7 @@
       Youstage
     </h1>
     <h1 class="header2">
-      The Stage is yours
+      The Stage is Yours!
     </h1>
     <div class="m-3">
       <img src="../../img/youstage/youstage_pages.png" class="d-block w-100 rounded2" alt="...">
@@ -47,16 +47,17 @@
       <h5 class="card-header header_pr">About the Project</h5>
       <div class="card-body">
         <h5 class="card-title">Task</h5>
-        <p class="card-text">The YouStage Apk is a prototype based on an student project in early 2020. It should help
-          me to get to know Flutter itself a bit better ans work a lot more with Git.
-        </p>
+        <p class="card-text">The YouStage application is a prototype based upon a student project from early 2020. In
+          the planning phase,
+          the idea was to become familiar with the prototype process. Once the module was completed,
+          I dived deeper by doing a front-end-only application with flutter to find out more about flutter and git.
         <h5 class="card-title">Functionality</h5>
-        <p class="card-text">The project was ment to be a Platform for a variety of Artist who can not perform in their
-          usual way due to Covid-19. It is ment ot be a Platform like Twitch but with more interactive features for
-          espacially artist. Most of the requirements can be seen in the "Anforderungsanalyse" in youstage/Prototype.
-
-          After the Project broke down due to semester ending in mid 2020 it was my idea to bring it alife in form of a
-          small Prototype. The full Prototype can be seen under youstage/Prototype.
+        <p class="card-text">The project was intended to serve as a platform for a variety of artists who are unable to
+          perform as normal due to COVID-19. It is supposedly a platform like Twitch, but with more interactive features
+          for the artist in particular. Most of the requirements may be seen in the "Anforderungsanalysis" in you
+          stadium/ Prototype. After the project crashed due to the end of the semester in the middle of 2020, it was my
+          idea to keep it alive in the form of a small prototype. The full Prototype can be seen under
+          youstage/Prototype.
         </p>
       </div>
     </div>
@@ -64,6 +65,7 @@
     <div class="card m-5 card_pr">
       <h5 class="card-header header_pr">Repository</h5>
       <div class="card-body">
+        <h5 class="card-title">GitHub</h5>
         <p class="card-text"><a
             href="https://github.com/Nudel4ufl4uf/YouStage-Apk">https://github.com/Nudel4ufl4uf/YouStage-Apk</a></p>
       </div>
@@ -76,7 +78,7 @@
           <h3 class="ls-tight font-bolder display-9 mb-3 m-3"> Dart </h3>
           <div class="progress m-3">
             <div class="progress-bar" role="progressbar" style="--value:98.2%" aria-valuenow="64.4" aria-valuemin="0"
-              aria-valuemax="100"></div>
+              aria-valuemax="100">98.2%</div>
           </div>
         </div>
         <div>
@@ -84,6 +86,7 @@
           <div class="progress m-3">
             <div class="progress-bar" role="progressbar" style="--value:1.3%" aria-valuenow="31.3" aria-valuemin="0"
               aria-valuemax="100"></div>
+            <div class="px-2">1.3%</div>
           </div>
         </div>
         <div>
@@ -91,6 +94,7 @@
           <div class="progress m-3">
             <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.1" aria-valuemin="0"
               aria-valuemax="100"></div>
+            <div class="px-2">0.5%</div>
           </div>
         </div>
 
