code style improvements

--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -90,7 +90,7 @@
                                 </div>
                             </div>
                             <p class="text_pr">In this project, I wanted to deploy my own voice assistant because of
-                                privacy concerns with my google assistant.</p>
+                                privacy concerns with my Google Assistant.</p>
                         </div>
                     </div>
                 </a>
