--- a/html/pages/mycroft_project.html
+++ b/html/pages/mycroft_project.html
@@ -16,14 +16,16 @@
 <body>
 
     <div class="container max-w-screen-xl p-5">
+
         <div class="alignCenter">
             <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
         </div>
+
         <div class="container_ref">
             <div class="row justify-content-center">
                 <div class="col-auto">
                     <a class="a_ref" href="../../index.html">
-                        <h1 class="text_ref"> Profile </h1>
+                        <h1 class="text_ref">Profile</h1>
                     </a>
                 </div>
                 <div class="col-auto">
@@ -53,14 +55,16 @@
                     <img src="../../img/mycroft/mc_homepage.png" class="d-block w-100 rounded2" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="header_pr">Web Page</h5>
-                        <p class="text_pr">This is the Web GUI, but nearly everything is controled via the terminal.</p>
+                        <p class="text_pr">This is the Web GUI, but nearly everything is controlled via the terminal.
+                        </p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../../img/mycroft/mc_chatterminal.png" class="d-block w-100 rounded2" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-white">Terminal GUI</h5>
-                        <p class="text-white">Here you can see the terminal GUI that shows your interactions in a visual
+                        <p class="text-white">Here you can see the terminal GUI that shows your interactions in a
+                            visual.
                             Manner.</p>
                     </div>
                 </div>
@@ -80,13 +84,13 @@
             <div class="card-body">
                 <h5 class="card-title">Task</h5>
                 <p class="card-text">The Idea was to deploy Mycroft as a privacy First Home Assistant solution on my
-                    raspberry pi to replace my google home assistant.
+                    Raspberry Pi to replace my Google home assistant.
                 </p>
                 <h5 class="card-title">Functionality</h5>
-                <p class="card-text">I transformed my raspberry pi into a Home Assistant, replacing my Google home
+                <p class="card-text">I transformed my Raspberry Pi into a Home Assistant, replacing my Google home
                     because of privacy issues.
                     After plugging in my external microphone and speaker and installing the Mycroft distribution, I had
-                    to go through all of the setup steps. Due to the great number of settings, I was able to customize
+                    to go through all the setup steps. Due to the great number of settings, I was able to customize
                     Mycroft to my personal requirements.
                 </p>
             </div>
@@ -96,8 +100,7 @@
             <h5 class="card-header header_pr">Source Project</h5>
             <div class="card-body">
                 <h5 class="card-title">Homepage</h5>
-                <p class="card-text"><a href="https://mycroft.ai/"
-                        style="text-decoration: none;">mycroft.ai/</a></p>
+                <p class="card-text"><a href="https://mycroft.ai/" style="text-decoration: none;">mycroft.ai/</a></p>
             </div>
             <div class="card-body">
                 <h5 class="card-title">GitHub</h5>
@@ -118,6 +121,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <footer>
