--- a/html/pages/nudelsearch_project.html
+++ b/html/pages/nudelsearch_project.html
@@ -16,9 +16,11 @@
 <body>
 
   <div class="container max-w-screen-xl p-5">
+
     <div class="alignCenter">
       <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
     </div>
+
     <div class="container_ref">
       <div class="row justify-content-center">
         <div class="col-auto">
@@ -61,12 +63,10 @@
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
       </button>
       <button class="carousel-control-next grey" type="button" data-bs-target="#carouselExampleDark"
         data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
       </button>
     </div>
 
@@ -82,20 +82,15 @@
       <h5 class="card-header header_pr">About the Project</h5>
       <div class="card-body">
         <h5 class="card-title">Task</h5>
-        <p class="card-text">With this little project i have deployed my own search engine based on Searchxng.
+        <p class="card-text">With this little project, I have deployed my own search engine based on Searchxng.
         </p>
         <h5 class="card-title">Functionality</h5>
-        <p class="card-text">At the Moment Nudelsearch is hosted in the cloud but in the future I aiming to deploye it
-          on
-          my raspberry pi. Due to problems with my fritzbox this has to wait. Eventhough the performance of this engine
-          is
-          not the same as googles but has the big benefit of full privacy. Furthermore this machine shows you result
-          form all
-          possible engines on the web and shows them all together. The core idea of searnxg is to send encrypted
-          requests to
-          engines on the web and present the answers to the user. With this method non of the other engines has viable
-          information
-          about you they can sell. For more Information check out the wiki:
+        <p class="card-text">At the Moment Nudelsearch is hosted in the cloud, but in the future I'm aiming to deploy it
+          on my Raspberry Pi. Due to problems with my fritz box, this has to wait. Even though the performance of this
+          engine is not the same as googles, but has the big benefit of full privacy. Furthermore, this machine shows
+          you result from all possible engines on the web and shows them all together. The core idea of searnxg is to
+          send encrypted requests to engines on the web and present the answers to the user. With this method, none of
+          the other engines has viable information about you, they can sell. For more Information, check out the wiki:
         </p>
         <a href="https://search.philoklemenz.de/info/de/about">search.philoklemenz.de/info/de/about</a>
       </div>
@@ -104,8 +99,17 @@
     <div class="card m-5 card_pr">
       <h5 class="card-header header_pr">Source Project</h5>
       <div class="card-body">
-        <p class="card-text"><a href="https://docs.searxng.org/">docs.searxng.org/</a>
-        </p>
+        <div class="card-body">
+          <h5 class="card-title">Wiki</h5>
+          <p class="card-text"><a href="https://docs.searxng.org/" style="text-decoration: none;">docs.searxng.org/</a>
+          </p>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">GitHub</h5>
+          <p class="card-text"><a href="https://github.com/searxng"
+              style="text-decoration: none;">github.com/searxng</a>
+          </p>
+        </div>
       </div>
     </div>
 
@@ -113,29 +117,69 @@
       <h5 class="card-header header_pr">Components</h5>
       <div class="card-body">
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 m-3"> Docker </h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Python</h3>
           <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:75.0%" aria-valuenow="75.0" aria-valuemin="0"
-              aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" style="--value:70.1%" aria-valuenow="70.1" aria-valuemin="0"
+              aria-valuemax="100">70.1%</div>
           </div>
         </div>
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Bash </h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Shell</h3>
           <div class="progress m-3">
-            <div class="progress-bar" role="progressbar" style="--value:25.0%" aria-valuenow="25.0" aria-valuemin="0"
+            <div class="progress-bar" role="progressbar" style="--value:12.8%" aria-valuenow="12.8" aria-valuemin="0"
+              aria-valuemax="100">12.8%</div>
+          </div>
+        </div>
+        <div>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">HTML</h3>
+          <div class="progress m-3">
+            <div class="progress-bar" role="progressbar" style="--value:6.4%" aria-valuenow="6.4" aria-valuemin="0"
+              aria-valuemax="100">6.4%</div>
+          </div>
+        </div>
+        <div>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Less</h3>
+          <div class="progress m-3">
+            <div class="progress-bar" role="progressbar" style="--value:5.7%" aria-valuenow="5.7" aria-valuemin="0"
+              aria-valuemax="100">5.7%</div>
+          </div>
+        </div>
+        <div>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
+          <div class="progress m-3">
+            <div class="progress-bar" role="progressbar" style="--value:3.0%" aria-valuenow="3.0" aria-valuemin="0"
               aria-valuemax="100"></div>
+            <div class="px-2">3.0%</div>
+          </div>
+        </div>
+        <div>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">CSS</h3>
+          <div class="progress m-3">
+            <div class="progress-bar" role="progressbar" style="--value:1.1%" aria-valuenow="1.1" aria-valuemin="0"
+              aria-valuemax="100"></div>
+            <div class="px-2">1.1%</div>
+          </div>
+        </div>
+        <div>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
+          <div class="progress m-3">
+            <div class="progress-bar" role="progressbar" style="--value:0.9%%" aria-valuenow="0.9" aria-valuemin="0"
+              aria-valuemax="100"></div>
+            <div class="px-2">0.9%</div>
           </div>
         </div>
       </div>
     </div>
 
-    <footer>
-      <p class="footer"> © Philo Klemenz 2022 </p>
-    </footer>
-    </head>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-      </script>
+  </div>
+
+  <footer>
+    <p class="footer"> © Philo Klemenz 2022 </p>
+  </footer>
+  </head>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
