--- a/html/pages/trintel_project.html
+++ b/html/pages/trintel_project.html
@@ -16,14 +16,16 @@
 <body>
 
   <div class="container max-w-screen-xl p-5">
+
     <div class="alignCenter">
       <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
     </div>
+
     <div class="container_ref">
       <div class="row justify-content-center">
         <div class="col-auto">
           <a class="a_ref" href="../../index.html">
-            <h1 class="text_ref"> Profile </h1>
+            <h1 class="text_ref">Profile</h1>
           </a>
         </div>
         <div class="col-auto">
@@ -63,21 +65,21 @@
           <img src="../../img/trintel/trintel_adminpanel.png" class="d-block w-100 rounded2" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="header_pr">Admin Panel.</h5>
-            <p class="text_pr">As an administrator you can access special Tools in the Admin Panel.</p>
+            <p class="text_pr">As an administrator, you can access special tools in the Admin Panel.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="../../img/trintel/trintel_Unternehmensseite.png" class="d-block w-100 rounded2" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="header_pr">Company Page.</h5>
-            <p class="text_pr">In this case as an administrator you can see and edit all companies.</p>
+            <p class="text_pr">In this case, as an administrator, you can see and edit all companies.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="../../img/trintel/trintel_Schuelerseite.png" class="d-block w-100 rounded2" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="header_pr">Student Page.</h5>
-            <p class="text_pr">As an Admin you can administrate and search through all student accounts.</p>
+            <p class="text_pr">As an administrator, you can control and search through all student accounts.</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -91,7 +93,7 @@
           <img src="../../img/trintel/trintel_Statistikseite.png" class="d-block w-100 rounded2" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="header_pr">Statistics.</h5>
-            <p class="text_pr">The administrator can see all systemwide statistics.</p>
+            <p class="text_pr">The administrator can see all system-wide statistics.</p>
           </div>
         </div>
       </div>
@@ -108,17 +110,15 @@
       <h5 class="card-header header_pr">About the Project</h5>
       <div class="card-body">
         <h5 class="card-title">Task</h5>
-        <p class="card-text">The task of the this project consisted in building a website for the RBZ Kiel. The
-          customer wanted a software to support their students in their Business Simulation by monitoring their
-          transactions with their imaginary business. We had two weeks to complete this task and present it to the RBZ.
+        <p class="card-text">The task of this project consisted in building a website for the RBZ Kiel. The customer
+          wanted a software to support their students in their Business Simulation by monitoring their transactions with
+          their imaginary business. We had two weeks to complete this task and present it to the RBZ.
         </p>
         <h5 class="card-title">Functionality</h5>
-        <p class="card-text">Our software provides the basic features like user roles with different interfaces as
-          well as the Companies and their transactions.
-          A user is then able to perform transactions with their company and get feedback from the software in the form
-          of
-          statistics, Sales History or Order Confirmation.
-          In addition, it is possible for the administrator to adjust the entire simulation.
+        <p class="card-text">Our software provides the basic features like user roles with different interfaces, as well
+          as the Companies and their transactions. A user is then able to perform transactions with their company and
+          get feedback from the software in the form of statistics, sales history or order confirmation. In addition, it
+          is possible for the administrator to adjust the entire simulation.
         </p>
       </div>
     </div>
@@ -158,21 +158,21 @@
       <h5 class="card-header header_pr">Languages</h5>
       <div class="card-body">
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 m-3"> Java </h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Java</h3>
           <div class="progress m-3">
             <div class="progress-bar" role="progressbar" style="--value:64.4%" aria-valuenow="64.4" aria-valuemin="0"
               aria-valuemax="100">64.4%</div>
           </div>
         </div>
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> HTML </h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">HTML</h3>
           <div class="progress m-3">
             <div class="progress-bar" role="progressbar" style="--value:31.1%" aria-valuenow="31.3" aria-valuemin="0"
               aria-valuemax="100">31.1%</div>
           </div>
         </div>
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> JavaScript</h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">JavaScript</h3>
           <div class="progress m-3">
             <div class="progress-bar" role="progressbar" style="--value:2.3%" aria-valuenow="2.3" aria-valuemin="0"
               aria-valuemax="100"></div>
@@ -180,7 +180,7 @@
           </div>
         </div>
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> CSS </h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">CSS</h3>
           <div class="progress m-3">
             <div class="progress-bar" role="progressbar" style="--value:1.9%" aria-valuenow="1.9" aria-valuemin="0"
               aria-valuemax="100"></div>
@@ -188,24 +188,25 @@
           </div>
         </div>
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Other </h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
           <div class="progress m-3">
             <div class="progress-bar" role="progressbar" style="--value:0.1%" aria-valuenow="0.1" aria-valuemin="0"
               aria-valuemax="100"></div>
             <div class="px-2">0.1%</div>
           </div>
         </div>
-
       </div>
     </div>
 
-    <footer>
-      <p class="footer"> © Philo Klemenz 2022 </p>
-    </footer>
-    </head>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-      </script>
+  </div>
+
+  <footer>
+    <p class="footer"> © Philo Klemenz 2022 </p>
+  </footer>
+  </head>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
