--- a/html/pages/webpage_project.html
+++ b/html/pages/webpage_project.html
@@ -16,9 +16,11 @@
 <body>
 
     <div class="container max-w-screen-xl p-5">
+
         <div class="alignCenter">
             <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
         </div>
+
         <div class="container_ref">
             <div class="row justify-content-center">
                 <div class="col-auto">
@@ -61,39 +63,41 @@
                     registration, so I build this webpage from scratch.
                 </p>
                 <h5 class="card-title">Functionality</h5>
-                <p class="card-text">The webpage is just static to represent some links and information about me.
-                    In the process I added another page show my projects I have done or am doing.
+                <p class="card-text">The webpage is just a static website to represent some links and information about
+                    me. In the process, I added another page showing my projects I have done, or I am doing.
                 </p>
             </div>
         </div>
 
         <div class="card m-5 card_pr">
-            <h5 class="card-header header_pr">Components</h5>
+            <h5 class="card-header header_pr">Languages</h5>
             <div class="card-body">
                 <div>
-                    <h3 class="ls-tight font-bolder display-9 mb-3 m-3"> Docker </h3>
+                    <h3 class="ls-tight font-bolder display-9 mb-3 m-3">HTML</h3>
                     <div class="progress m-3">
-                        <div class="progress-bar" role="progressbar" style="--value:75.0%" aria-valuenow="75.0"
-                            aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar" role="progressbar" style="--value:79%" aria-valuenow="79.0"
+                            aria-valuemin="0" aria-valuemax="100">79.0%</div>
                     </div>
                 </div>
                 <div>
-                    <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Bash </h3>
+                    <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">CSS</h3>
                     <div class="progress m-3">
-                        <div class="progress-bar" role="progressbar" style="--value:25.0%" aria-valuenow="25.0"
-                            aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar" role="progressbar" style="--value:21%" aria-valuenow="21.0"
+                            aria-valuemin="0" aria-valuemax="100">21.0%</div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <footer>
-            <p class="footer"> © Philo Klemenz 2022 </p>
-        </footer>
-        </head>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-            </script>
+    </div>
+
+    <footer>
+        <p class="footer"> © Philo Klemenz 2022 </p>
+    </footer>
+    </head>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
