--- a/html/pages/youstage_project.html
+++ b/html/pages/youstage_project.html
@@ -16,14 +16,16 @@
 <body>
 
   <div class="container max-w-screen-xl p-5">
+
     <div class="alignCenter">
       <img src="/img/pk_logo_green.png" class="h-8 rounded2" width="100" height="100" />
     </div>
+
     <div class="container_ref">
       <div class="row justify-content-center">
         <div class="col-auto">
           <a class="a_ref" href="../../index.html">
-            <h1 class="text_ref"> Profile </h1>
+            <h1 class="text_ref">Profile</h1>
           </a>
         </div>
         <div class="col-auto">
@@ -40,16 +42,17 @@
     <h1 class="header2">
       The Stage is Yours!
     </h1>
+
     <div class="m-3">
       <img src="../../img/youstage/youstage_pages.png" class="d-block w-100 rounded2" alt="...">
     </div>
+
     <div class="card m-5 card_pr">
       <h5 class="card-header header_pr">About the Project</h5>
       <div class="card-body">
         <h5 class="card-title">Task</h5>
         <p class="card-text">The YouStage application is a prototype based upon a student project from early 2020. In
-          the planning phase,
-          the idea was to become familiar with the prototype process. Once the module was completed,
+          the planning phase, the idea was to become familiar with the prototype process. Once the module was completed,
           I dived deeper by doing a front-end-only application with flutter to find out more about flutter and git.
         <h5 class="card-title">Functionality</h5>
         <p class="card-text">The project was intended to serve as a platform for a variety of artists who are unable to
@@ -75,14 +78,14 @@
       <h5 class="card-header header_pr">Languages</h5>
       <div class="card-body">
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 m-3"> Dart </h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 m-3">Dart</h3>
           <div class="progress m-3">
             <div class="progress-bar" role="progressbar" style="--value:98.2%" aria-valuenow="64.4" aria-valuemin="0"
               aria-valuemax="100">98.2%</div>
           </div>
         </div>
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Swift </h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Swift</h3>
           <div class="progress m-3">
             <div class="progress-bar" role="progressbar" style="--value:1.3%" aria-valuenow="31.3" aria-valuemin="0"
               aria-valuemax="100"></div>
@@ -90,7 +93,7 @@
           </div>
         </div>
         <div>
-          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3"> Other </h3>
+          <h3 class="ls-tight font-bolder display-9 mb-3 pt-5 m-3">Other</h3>
           <div class="progress m-3">
             <div class="progress-bar" role="progressbar" style="--value:0.5%" aria-valuenow="0.1" aria-valuemin="0"
               aria-valuemax="100"></div>
@@ -100,8 +103,6 @@
 
       </div>
     </div>
-
-
 
     <footer>
       <p class="footer"> © Philo Klemenz 2022 </p>
