new project added + nav improvements

--- a/html/pages/nudelsearch_project.html
+++ b/html/pages/nudelsearch_project.html
@@ -87,8 +87,8 @@
         <h5 class="card-title">Functionality</h5>
         <p class="card-text">At the Moment Nudelsearch is hosted in the cloud, but in the future I'm aiming to deploy it
           on my Raspberry Pi. Due to problems with my fritz box, this has to wait. Even though the performance of this
-          engine is not the same as googles, but has the big benefit of full privacy. Furthermore, this machine shows
-          you result from all possible engines on the web and shows them all together. The core idea of searnxg is to
+          engine is not the same as googles engine, but has the big benefit of full privacy. Furthermore, this machine shows
+          you results from all possible engines on the web and shows them all together. The core idea of searnxg is to
           send encrypted requests to engines on the web and present the answers to the user. With this method, none of
           the other engines has viable information about you, they can sell. For more Information, check out the wiki:
         </p>
