--- a/html/pages/projects.html
+++ b/html/pages/projects.html
@@ -21,18 +21,22 @@
         </div>
         <div class="container_ref">
             <div class="row justify-content-center">
-                <div class="col-auto">
-                    <a class="a_ref" href="../../index.html">
-                        <h1 class="text_ref">Profile</h1>
-                    </a>
+              <div class="col-auto">
+                <div class="card_Ac">
+                  <a class="a_ref" href="../../index.html">
+                    <h1 class="text_navlink p-2 m-2"> Profile </h1>
+                  </a>
                 </div>
-                <div class="col-auto">
-                    <a class="a_ref" href="./projects.html">
-                        <h1 class="text_ref">Projects</h1>
-                    </a>
+              </div>
+              <div class="col-auto">
+                <div class="card_NavDeac">
+                  <a class="a_ref" href="./projects.html">
+                    <h1 class="text-white p-2 m-2">Projects</h1>
+                  </a>
                 </div>
+              </div>
             </div>
-        </div>
+          </div>
 
         <h1 class="header1">Projects</h1>
 
@@ -41,7 +45,7 @@
                 <a class="a_ref" href="./trintel_project.html">
                     <div class="card card_pr">
                         <img src="../../img/trintelV4_transparentB.jpg" class="img_pr"
-                            alt="Hollywood Sign on The Hill" />
+                        alt="Hollywood Sign on The Hill" />
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-auto">
@@ -52,8 +56,64 @@
                             </div>
                             <p class="text_pr">
                                 This was a Team project with a couple of students as a Uni project.
-                                We constructed a web app for the RBZ Kiel.
+                                We constructed a web app for a "Planspiel" at the RBZ Kiel.
                             </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a class="a_ref" href="./nudelsearch_project.html">
+                    <div class="card card_pr">
+                        <img src="../../img/bachelorSeehafenAR_logo.png" class="img_pr" alt="Skyscrapers" />
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_pr">AR Process-Documentation Toolkit</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <p class="text_pr">
+                                This is my bachelors thesis and will be supplying the Seehafen Kiel with a toolkit for documenting their
+                                processes with AR Components.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a class="a_ref" href="./nudelsearch_project.html">
+                    <div class="card card_pr">
+                        <img src="../../img/nudelsearch_logofullquad.png" class="img_pr" alt="Skyscrapers" />
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_pr">Nudelsearch</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <p class="text_pr">
+                                My own public search engine based on searnxg. I deployed this solution due to privacy
+                                concerns.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col">
+                <a class="a_ref" href="./webpage_project.html">
+                    <div class="card card_pr">
+                        <img src="../../img/pk_logo_green.png" class="img_pr" alt="Los Angeles Skyscrapers" />
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-auto">
+                                    <h5 class="header_pr">Profile Website</h5>
+                                </div>
+                                <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i></div>
+                            </div>
+                            <p class="text_pr">A web page built from scratch to return to HTML & CSS. Furthermore I learned about DNS management.</p>
                         </div>
                     </div>
                 </a>
@@ -109,42 +169,6 @@
                             </div>
                             <p class="text_pr">
                                 Here I deployed my own Homeserver for all my Smart Home Devices.
-                            </p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a class="a_ref" href="./webpage_project.html">
-                    <div class="card card_pr">
-                        <img src="../../img/pk_logo_green.png" class="img_pr" alt="Los Angeles Skyscrapers" />
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-auto">
-                                    <h5 class="header_pr">Profile Website</h5>
-                                </div>
-                                <div class="col-md-auto"><i class="fa fa-spinner grey" aria-hidden="true"></i></div>
-                            </div>
-                            <p class="text_pr">A web page built from scratch to return to HTML & CSS. Furthermore I learned about DNS management.</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col">
-                <a class="a_ref" href="./nudelsearch_project.html">
-                    <div class="card card_pr">
-                        <img src="../../img/nudelsearch_logo.png" class="img_pr" alt="Skyscrapers" />
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-auto">
-                                    <h5 class="header_pr">Nudelsearch</h5>
-                                </div>
-                                <div class="col-md-auto"><i class="fa fa-spinner green" aria-hidden="true"></i>
-                                </div>
-                            </div>
-                            <p class="text_pr">
-                                My own public search engine based on searnxg. I deployed this solution due to privacy
-                                concerns.
                             </p>
                         </div>
                     </div>
