--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
     <div class="container_ref">
       <div class="row justify-content-center">
         <div class="col-auto">
-          <a class="a_ref" href="./index.html">
-            <h1 class="text_ref"> Profile </h1>
-          </a>
+          <div class="card_NavDeac">
+            <a class="a_ref" href="./index.html">
+              <h1 class="text-white p-2 m-2"> Profile </h1>
+            </a>
+          </div>
         </div>
         <div class="col-auto">
-          <a class="a_ref" href="/html/pages/projects.html">
-             <h1 class="text_ref">Projects</h1>
-          </a>
+          <div class="card_Ac">
+            <a class="a_ref" href="/html/pages/projects.html">
+              <h1 class="text_navlink p-2 m-2">Projects</h1>
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -46,18 +50,23 @@
             <a href="https://www.linkedin.com/in/philo-klemenz-3bb046234"><i class="fab fa-linkedin-in icon"></i></a>
           </li>
           <li>
-            <a href="https://www.xing.com/profile/Philo_Klemenz"><i class="fab fa-xing icon"></i></a></li>
+            <a href="https://www.xing.com/profile/Philo_Klemenz"><i class="fab fa-xing icon"></i></a>
+          </li>
           <li>
-            <a href="https://github.com/Nudel4ufl4uf"><i class="fab fa-github icon"></i></a></li>
+            <a href="https://github.com/Nudel4ufl4uf"><i class="fab fa-github icon"></i></a>
+          </li>
           <li>
-            <a href="https://www.instagram.com/philoklm/"><i class="fab fa-instagram icon"></i></a></li>
+            <a href="https://www.instagram.com/philoklm/"><i class="fab fa-instagram icon"></i></a>
+          </li>
           <li>
             <a href="https://open.spotify.com/user/philo.klemenz?si=6MbnOqIfT-euw9bZKjMAdg&utm_source=copy-link"><i
-                class="fab fa-spotify icon"></i></a></li>
+                class="fab fa-spotify icon"></i></a>
+          </li>
           <li>
             <a
               href="https://soundcloud.com/philoklemenz?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"><i
-                class="fab fa-soundcloud icon"></i></a></li>
+                class="fab fa-soundcloud icon"></i></a>
+          </li>
         </ul>
       </div>
 
@@ -68,22 +77,27 @@
             <a href="https://www.linkedin.com/in/philo-klemenz-3bb046234"><i class="fab fa-linkedin-in icon"></i></a>
           </li>
           <li class="list-group-item-light">
-            <a href="https://www.xing.com/profile/Philo_Klemenz"><i class="fab fa-xing icon"></i></a></li>
+            <a href="https://www.xing.com/profile/Philo_Klemenz"><i class="fab fa-xing icon"></i></a>
+          </li>
         </ul>
         <ul class="list-group list-group-horizontal d-flex justify-content-center">
           <li class="list-group-item-light">
-            <a href="https://github.com/Nudel4ufl4uf"><i class="fab fa-github icon"></i></a></li>
+            <a href="https://github.com/Nudel4ufl4uf"><i class="fab fa-github icon"></i></a>
+          </li>
           <li class="list-group-item-light">
-            <a href="https://www.instagram.com/philoklm/"><i class="fab fa-instagram icon"></i></a></li>
+            <a href="https://www.instagram.com/philoklm/"><i class="fab fa-instagram icon"></i></a>
+          </li>
         </ul>
         <ul class="list-group list-group-horizontal  justify-content-center">
           <li class="list-group-item-light">
             <a href="https://open.spotify.com/user/philo.klemenz?si=6MbnOqIfT-euw9bZKjMAdg&utm_source=copy-link"><i
-                class="fab fa-spotify icon"></i></a></li>
+                class="fab fa-spotify icon"></i></a>
+          </li>
           <li class="list-group-item-light">
             <a
               href="https://soundcloud.com/philoklemenz?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"><i
-                class="fab fa-soundcloud icon"></i></a></li>
+                class="fab fa-soundcloud icon"></i></a>
+          </li>
         </ul>
       </div>
     </div>
@@ -141,7 +155,7 @@
             <h5 class="card-body"> Moderations und Präsentationstechniken </h5>
           </div>
           <h1 class="ls-tight display-6 mb-5 pt-5">In Progress</h1>
-          <div class="card text-white">
+          <div class="card_cert text-white">
             <h5 class="card-body"> Projektmanagement Basiszertifikat (IPMA) (11/2022) </h5>
           </div>
         </div>
@@ -231,7 +245,7 @@
   </head>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-  </script>
+    </script>
 </body>
 
 </html>
